update once again

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ a {
   content: "";
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
-  background: url('/img/bg.jpg') center center / cover no-repeat;;
+  background: url('./img/bg.jpg') center center / cover no-repeat;;
   transform-origin: center center;
   animation: zoomBlur 20s ease-in-out infinite;
   z-index: -1;
